Make footer of about-us page bigger

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -21,7 +21,8 @@
         $('.footer').css({
             'background-color': '#333333',
             'margin-top': '0px',
-            'border-top': 'none'
+            'border-top': 'none',
+            'height': '100px'
         });
     });
 </script>
