fix all gabriel bug

--- a/app/assets/stylesheets/password_resets.css.scss
+++ b/app/assets/stylesheets/password_resets.css.scss
@@ -62,3 +62,55 @@
 
 }
 
+.pw_reset_content_wrap{
+  text-align:center;
+  padding-top:80px;
+  height:360px;
+}
+.pw_reset_logo{
+  width:45%;
+  float:left;
+  height:260px;
+  border-right: 1px solid #e2e2e2;
+  text-align:center;
+  vertical-align:middle;
+  display:table;
+  padding-right:3%;
+}
+
+.pw_logo_helper{
+  display:inline-block;
+  height:100%;
+  vertical-align: middle;
+}
+
+.pw_reset_logo img{
+  vertical-align: middle;
+}
+
+.pw_reset_form{
+  width:40%;
+  float:left;
+  text-align: left;
+  padding:0 5%;
+}
+
+.actions.pw_reset_btn_wrap input{
+  background-color: #39b54A;
+  color: white;
+  font-size:12px;
+  border-radius: 3px;
+  box-shadow: none;
+  border: none;
+  width: 136px;
+  margin-top:15px;
+}
+.pw_reset_content_wrap .field label{
+  font-size:12px;
+  margin-top:5px;
+  margin-bottom:3px;
+}
+.pw_reset_content_wrap .field input{
+  width:315px;
+}
+
