--- a/app/views/password_resets/thank_you_page.html.erb
+++ b/app/views/password_resets/thank_you_page.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div id="password_reset_content">
       <p>
-        Just confirm the link sent to your email and you will be back i your ROOM in no time!
+        Just confirm the link sent to your email and you'll be back in your ROOM in no time!
       </p>
     </div>
 
