--- a/app/views/users_profiles/edit_users_profiles_by_user_id.erb
+++ b/app/views/users_profiles/edit_users_profiles_by_user_id.erb
@@ -24,11 +24,12 @@
 
 
             <div class="field">
-              <%= f.label :firstname %>
+
+              <span>First Name</span>
               <%= f.text_field :firstname %>
             </div>
             <div class="field">
-              <%= f.label :lastname %>
+              <span>Last Name</span>
               <%= f.text_field :lastname %>
             </div>
             <div class="field">
