--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -64,16 +64,26 @@
   padding-bottom: 10px;
 
 }
-#xroom_header_myroom{
+#xroom_header_user_room_dropdown-toggle{
   background-color: #333333;
-  padding-bottom: 17px;
+  padding-bottom: 10px;
+
+}
+.xroom_header_li_element{
+  padding: 3px;
+}
+
+#xroom_header_myroom{
+  font-weight: lighter;
+  background-color: #333333;
+  padding: 5px;
   color: #ffffff;
 }
 
 
 #xroom_header_myroom img{
-  width: 23px;
-  height: 23px;
+  width: 40px;
+  height: 40px;
 
 }
 
