--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -14,7 +14,7 @@
            Forgot your password?
       </div>
       <div id="password_reset_content">
-           No worries! Please enter your email address below and we will send you an email with instructions on how to reset your password
+           No worries! Please enter your email address below and we will send you an email with instructions on how to reset your password.
       </div>
 
 
