--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -22,9 +22,9 @@
 
       <p class="shop_main_image_name">
           <% if @items_design.image_name_selection.blank?  %>
-              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png")%>
+              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png", :class =>"shop_image_name" )%>
           <% else %>
-              <%= cl_image_tag(@items_design.image_name_selection , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png") %>
+              <%= cl_image_tag(@items_design.image_name_selection , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png", :class =>"shop_image_name") %>
           <% end%>
 
         </p>
@@ -64,15 +64,19 @@
         <% end %>
         <br/>
         <br/>
+        <% if @items_design.product_url.blank? %>
 
-        <form>
-          <input type="button"
-                 id="shop_green_button"
-                 class="green_button green_button_light"
-                 value="Buy at <%=@items_design_btn_url_name.to_s%>"
-                 onclick="window.location.href='<%=@items_design.product_url%>'"
-                 style="background-image: url('<%= @static_content.image_name %>')">
-        </form>
+        <%else%>
+            <form>
+              <input type="button"
+                     id="shop_green_button"
+                     class="green_button green_button_light"
+                     value="Buy at <%=@items_design_btn_url_name.to_s%>"
+                     onclick="window.open('<%=@items_design.product_url%>','_blank')"
+                     style="background-image: url('<%= @static_content.image_name %>')">
+            </form>
+
+        <% end %>
 
       </div>
 
