--- a/app/views/shop/show_theme.html.erb
+++ b/app/views/shop/show_theme.html.erb
@@ -25,9 +25,9 @@
         <p class="shop_main_image_name">
 
           <% if @theme.image_name_selection.blank?  %>
-              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png")%>
+              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png",  :class =>"shop_image_name" )%>
           <% else %>
-              <%= cl_image_tag(@theme.image_name_selection , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png") %>
+              <%= cl_image_tag(@theme.image_name_selection , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png", :class =>"shop_image_name" ) %>
           <% end%>
         </p>
       </div>
