add text changes to landing page and key request email subject line. add new landing img

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -245,7 +245,7 @@ padding: 8px 35px;
     </div>
     <!-- 2-->
     <div class="item">
-      <div class="fill" style="background-image:url('http://placekitten.com/1024/700');">
+      <div class="fill" style="background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385521275/landing-page-organize-blue-blue.jpg');">
         <div class="container">
 
           <div class="landing_slide_content">
@@ -296,7 +296,7 @@ padding: 8px 35px;
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
             <p class="landing_text_2" >SHARE</p>
-            <p class="landing_text_3 uppercase">Products &nbsp;  &#183; &nbsp;  Contents &nbsp;  &#183; &nbsp;  Designs</p><br>
+            <p class="landing_text_3 uppercase">Products &nbsp;  &#183; &nbsp;  Content &nbsp;  &#183; &nbsp;  Design</p><br>
            <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
@@ -317,7 +317,7 @@ padding: 8px 35px;
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
             <p class="landing_text_2" >CREATE</p>
-            <p class="landing_text_3 ">a home on the web</p><br>
+            <p class="landing_text_3 ">A HOME ON THE WEB</p><br>
 
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
