add button on the toolbar on the room

--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -103,3 +103,10 @@
   padding:0 3em;
   margin: 0 1em;
 }
+
+.xroom_header_li_login_btn{
+  padding-top: 3px;
+}
+.xroom_header_li_sign_up_btn{
+  padding-top: 3px;
+}
