--- a/app/assets/stylesheets/rooms_profile_large_item.css.scss
+++ b/app/assets/stylesheets/rooms_profile_large_item.css.scss
@@ -56,6 +56,15 @@
   .navbar-inner{
     box-shadow:none;
   }
+  /*Sometimes Facebook confirms a like. If that happens, this prevents other divs from covering it up */
+  /*and keeps the generated iframe in the viewport. */
+  .fb-like iframe{
+    z-index:1600;
+    bottom:0;
+    min-width:95px;
+    min-height:25px;
+
+  }
 
 }
 .activity_item_large_list.profile_button{
