fix select room btn position

--- a/app/assets/stylesheets/xroom.css.scss
+++ b/app/assets/stylesheets/xroom.css.scss
@@ -60,8 +60,8 @@ a.xroom_entire_room_right_fill-div {
   position:fixed;
   z-index:1501;
   top:40px;
-  left:28%;
-  padding: 6px 46px;
+  left: 50%;
+  margin-left: -250px;
 }
 
 #xroom_entire_room_btn_blue{
