--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -29,7 +29,7 @@
             <div id="xroom_entire_room_background">
                 <% if @bundle.theme.image_name.blank?  %>
                 <% else %>
-                    <%= cl_image_tag @bundle.image_name_entire_room ,:quality => 50, :default_image => "default_image_all.png", :alt => "enrire room"  %>
+                    <%= cl_image_tag @bundle.image_name_entire_room ,:quality => 80, :default_image => "default_image_all.png", :alt => "enrire room"  %>
                 <% end %>
             </div>
             <div id="xroom_entire_room_left" style="background-image: url('<%= @arrows_image %>')" >
@@ -51,15 +51,15 @@
 
 <script>
 
-        $(function() {
-            //console.log('center room on the tutorial');
-            var document_width = $(document).width();
-            var window_width = $(window).width();
-            var percent = 0.44;
-            var width_percent = document_width - window_width;
-            width_percent = width_percent * percent;
-            window.scrollTo(width_percent, 0);
-        });
+//        $(function() {
+//            //console.log('center room on the tutorial');
+//            var document_width = $(document).width();
+//            var window_width = $(window).width();
+//            var percent = 0.44;
+//            var width_percent = document_width - window_width;
+//            width_percent = width_percent * percent;
+//            window.scrollTo(width_percent, 0);
+//        });
 
 
 </script>
