add item name singular

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -26,6 +26,11 @@
         <%= f.text_field :name %>
       </div>
 
+        <div class="field">
+          <%= f.label :name_singular %><br />
+          <%= f.text_field :name_singular %>
+        </div>
+
       <div class="field">
         <%= f.label :clickable %>
         <%= f.radio_button :clickable, 'yes', checked: true %>yes</br>
