--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,9 +8,10 @@
 
   <tr>
     <th>Item Id</th>
-    <th>Name</th>
+    <th>Name plural</th>
+    <th>Name singular</th>
     <th>Clickable</th>
-    <th>Image name</th>
+    <th>Image name </th>
     <th>Image name gray</th>
     <th>Image name first time click</th>
 
@@ -25,6 +26,8 @@
 
     <td><%= item.id %></td>
     <td><%= item.name %></td>
+    <td><%= item.name_singular %></td>
+
     <td><%= item.clickable %></td>
     <td>
 
