bug fix first time popup on mouse over

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -20,6 +20,8 @@
   <div id="xroom_footer">   </div>
   <div id="xroom_scroll_right">   </div>
   <div id="xroom_tutorial_container">   </div>
+  <div id="xroom_popup_container">   </div>
+
 
   <div id="xroom">
     <div id="xroom_items_0">    </div>
